# screen2world-d

./: .gitignore  .x  CMakeLists.txt  README.md  app.cpp  autocalib.cpp  gen-points.cpp  points-matrix.tpl  points_matrix.yaml  rotation_translation_matrix.yaml  screen2worldK.cpp  yamlgen.cpp
include/: autocalib.hpp  auxmath.hpp  yamlgen.hpp
test/: detections.csv
